[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "conda-ops"
version = "1.0"
description = "My conda ops subcommand plugin"
requires-python = ">=3.7"
dependencies = ["conda", "ruamel.yaml"]

[project.entry-points.conda]
conda-ops = "src.conda_ops"

[tool.setuptools]
py-modules = ["src"]
